--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+
 html,
 body {
   padding: 0;
@@ -15,4 +16,5 @@ a {
 
 * {
   box-sizing: border-box;
+  color: $brand-color-800;
 }
