Feat: Color template

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,11 +1,11 @@
-$neutral-color-100: #F9FAFB;
-$neutral-color-700: #3B4554;
-$neutral-color-800: #212C3B;
-$neutral-color-900: #101B2A;
+$neutral-100: #F9FAFB;
+$neutral-700: #3B4554;
+$neutral-800: #212C3B;
+$neutral-900: #101B2A;
 
-$brand-color-50: #FAFCFF;
-$brand-color-100: #F0F6FF;
-$brand-color-200: #D1E9FF;
-$brand-color-600: #1570EF;
-$brand-color-800: #1849A9;
-$brand-color-900: #1849A9;
+$brand-50: #FAFCFF;
+$brand-100: #F0F6FF;
+$brand-200: #D1E9FF;
+$brand-600: #1570EF;
+$brand-800: #1849A9;
+$brand-900: #1849A9;
