Feat: Nav Item completed

--- a/src/components/NavItem/NavItem.module.scss
+++ b/src/components/NavItem/NavItem.module.scss
@@ -8,14 +8,18 @@
   justify-content: center;
   padding: 1rem;
   color: $brand-800;
+
+  &:hover {
+    background-color: $brand-100;
+  }
+
   &:active {
     background-color: $brand-200;
   }
+
   & > svg {
     margin-right: 0.874375rem;
-  }
-  &:hover {
-    background-color: $brand-100;
+    font-size: 1.5rem;
   }
 
   &.active {
