--- a/src/components/NavItem/NavItem.module.scss
+++ b/src/components/NavItem/NavItem.module.scss
@@ -22,7 +22,7 @@
     font-size: 1.5rem;
   }
 
-  &.active {
+  &.selected {
     color: #FFFFFF;
     background-color: $brand-600;
     border: 1px solid $brand-600;
