--- a/src/components/NavItem/NavItem.module.scss
+++ b/src/components/NavItem/NavItem.module.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   padding: 1rem;
   color: $brand-800;
+  transition:all 0.5s ease-in-out;
 
   &:hover {
     background-color: $brand-100;
