--- a/src/components/InnerAccordion/InnerAccordion.module.scss
+++ b/src/components/InnerAccordion/InnerAccordion.module.scss
@@ -1,44 +1,52 @@
 @import '@/styles/colors.scss';
 
-.trigger {
-  color: $neutral-800;
-  font-weight: 600;
-  background-color: $brand-100;
-  display: flex;
-  align-items: center;
-  padding: 0.75rem 1.1875rem;
-  border-radius:0.75rem;
-  width: 100%;
-  border: none;
-  cursor: pointer;
-  transition:all 0.5s ease-in-out;
-  margin-bottom: 1rem;
-
-  &:hover {
-    background-color: $brand-200;
-  }
-
-  & > .icon{
-    transform-origin: 50% 50%;
-    transition:all 0.5s ease-in-out;
-    margin-right: 0.75rem;
-    font-size: 1rem;
+.accordion__header {
+  margin: 0;
+  & > .trigger {
+    color: $neutral-800;
+    font-weight: 600;
+    background-color: $brand-100;
     display: flex;
-}
-
-  &[aria-expanded="true"] {
-    & > .icon {
-      transform: rotate(180deg);
+    align-items: center;
+    padding: 0.75rem 1.1875rem;
+    border-radius:0.75rem;
+    width: 100%;
+    border: none;
+    cursor: pointer;
+    transition:all 0.5s ease-in-out;
+    margin-bottom: 1rem;
+  
+    &:hover {
+      background-color: $brand-200;
     }
+  
+    & > .icon{
+      transform-origin: 50% 50%;
+      transition:all 0.5s ease-in-out;
+      margin-right: 0.75rem;
+      font-size: 1rem;
+      display: flex;
+    }
+  
+    &[aria-expanded="true"] {
+      & > .icon {
+        transform: rotate(180deg);
+      }
+    }
+  
   }
-
 }
+
 
 .panel {
   max-height: 0;
-  transition: all 1.5s ease-in-out;
-
-  &:not([aria-hidden="true"]) {
+  overflow-y: hidden;
+  &.active {
     max-height: 1000px;
+    margin-bottom: 1rem;
   }
+  & > * {
+    margin: 0;
+  }
+  transition:all 0.3s ease-in-out;
 }
