--- a/src/components/NavItem/NavItem.module.scss
+++ b/src/components/NavItem/NavItem.module.scss
@@ -6,8 +6,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
+  padding: 0.7rem 1rem;
   color: $brand-800;
+  width: fit-content;
+  font-size: 0.9rem;
 
   &:hover {
     background-color: $brand-100;
@@ -19,7 +21,7 @@
 
   & > svg {
     margin-right: 0.874375rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 
   &.selected {
