--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,3 +1,5 @@
+@import "@/styles/_typography.scss";
+
 .container {
   background: url("/images/bg-hero.png");
   background-repeat: no-repeat;
@@ -7,6 +9,11 @@
   padding: 3.5rem;
 
   h1 {
+    @extend .heading__600;
     margin-bottom: 2rem;
+  }
+
+  p {
+    @extend .text__short--lg;
   }
 }
