--- a/src/components/Blockchains/Blockchains.module.scss
+++ b/src/components/Blockchains/Blockchains.module.scss
@@ -6,7 +6,7 @@
   padding: 4rem 0;
   border-bottom: 1px solid $brand-200;
 
-  & > h2 {
+  h2 {
     @extend .heading__200;
     font-weight: 600;
     color: $neutral-900;
@@ -18,13 +18,13 @@
     display: flex;
     flex-flow: row wrap;
     gap: 0.75rem;
-    & > * {
+    * {
       flex-grow: 1;
     }
 
 
     @media (min-width: 1024px) {
-      & > * {
+      * {
         flex-grow: 0;
       }
     }
