--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,15 +1,26 @@
 @import "@/styles/_typography.scss";
+@import "@/styles/colors.scss";
+
+.container {
+   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+   background-color: #FFFFFF;
+   width: 100%;
+   height: 100%;
+   position: sticky;
+  top: 0;
+  z-index: 9999;
+}
 
 .navbar {
   display: flex;
   justify-content: center;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
   padding: 1rem;
   gap: 1.5rem;
-  position: sticky;
-  top: 0;
-  z-index: 9999;
   background-color: #FFFFFF;
+  position: relative;
+  width: 100%;
+  max-width: 1276px;
+  margin: 0 auto;
 
   &__group {
     display: flex;
@@ -29,5 +40,14 @@
       display: flex;
       gap: 0.5rem;
     }
+  }
+
+  .progress {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    background-color: $brand-600;
+    transition:all 0.5s ease-in-out;
   }
 }
