--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,6 +7,8 @@ body {
   margin: 0;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+    scroll-behavior: smooth;
 }
 
 a {
