--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -12,13 +12,12 @@
 
 .navbar {
   display: flex;
-  justify-content: center;
   padding: 1rem;
   gap: 1.5rem;
   background-color: #FFFFFF;
   position: relative;
   width: 100%;
-  max-width: 1276px;
+  overflow-x: auto;
   margin: 0 auto;
 
   &__group {
@@ -42,6 +41,7 @@
   }
 
   @media (min-width: 1276px) {
+    max-width: 1276px;
     justify-content: center;
     overflow-x: hidden;
   }
