--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,16 +1,24 @@
 @import "@/styles/_typography.scss";
 
+.container {
+   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+   background-color: #FFFFFF;
+   width: 100%;
+   height: 100%;
+   position: sticky;
+   top: 0;
+   z-index: 9999;
+}
+
 .navbar {
   display: flex;
-  
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
   padding: 1rem;
   gap: 1.5rem;
-  position: sticky;
-  top: 0;
-  z-index: 9999;
   background-color: #FFFFFF;
+  position: relative;
+  width: 100%;
   overflow-x: auto;
+  margin: 0 auto;
 
   &__group {
     display: flex;
@@ -32,7 +40,8 @@
     }
   }
 
-  @media (min-width: 1276px) {
+  @media (min-width: 1280px) {
+    max-width: 1276px;
     justify-content: center;
     overflow-x: hidden;
   }
