--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -3,3 +3,10 @@
   margin: 2rem auto;
   padding-inline: 2rem;
 }
+
+
+.accordion_contents {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 0.5rem;
+  }
