--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,10 +1,11 @@
 .container {
   max-width: 1276px;
-  margin: 2rem auto;
-  padding-inline: 2rem;
+  margin: 1rem auto;
+  padding-inline: 1rem;
 }
 .accordion_contents {
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
     gap: 0.5rem;
 }
