--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,13 +1,11 @@
 @import "@/styles/_typography.scss";
 
 .container {
-  background: url("/images/bg-hero.png");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
   border-radius: 1rem;
   color: white;
   padding: 3.5rem;
+  position: relative;
+  overflow-x: hidden;
 
   h1 {
     @extend .heading__600;
@@ -20,6 +18,9 @@
     display: none;
   }
 
+  .image {
+    z-index: -1;
+  }
    @media (min-width: 1024px) {
      h1 {
        font-size: 2.5rem;
