--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -6,8 +6,14 @@
    width: 100%;
    height: 100%;
    position: sticky;
+   transition:top 0.5s ease 0s;
    top: 0;
    z-index: 9999;
+
+   
+   &.scrolled{
+     top: -30px;
+   }
 }
 
 .navbar {
