--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,6 +1,6 @@
 .container {
   max-width: 1276px;
-  margin: 1rem auto;
+  margin: 2rem auto;
   padding-inline: 1rem;
 }
 .accordion_contents {
@@ -8,4 +8,8 @@
     flex-flow: row wrap;
     justify-content: center;
     gap: 0.5rem;
+
+    @media (min-width: 1024px) {
+      justify-content: start;
+    }
 }
