--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,6 +1,6 @@
 .container {
   max-width: 1276px;
-  margin: 2rem auto;
+  margin: 2rem auto 6rem;
   padding-inline: 1rem;
 }
 .accordion_contents {
