--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -6,12 +6,17 @@
   border-radius: 0.75rem;
   margin-top: 1.5625rem;
   position: relative;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+
+  &:hover {
+    box-shadow: 0 0 15px -5px rgba(0,0,0,0.3);
+  }
 }
 
 .title {
   margin: 0;
   border-bottom: 1px solid $brand-200;
-  padding: 1rem;
   scroll-margin: 10rem;
   
   button {
@@ -25,6 +30,7 @@
     align-items: center;
     gap: 0.2rem;
     width: 100%;
+    padding: 1rem;
     cursor: pointer;
 
     svg {
