feat: section functionality (#92)
* feat: section functionality

* fix: removed aria-disabled

* Fix: aria-expanded dynamic

Co-authored-by: Jerry Hogan <jerry.hogan@thisdot.co>

--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -12,6 +12,7 @@
   margin: 0;
   border-bottom: 1px solid $brand-200;
   padding: 1rem;
+  scroll-margin: 10rem;
   
   button {
     color: $brand-900;
