Fix: scroll as expected

--- a/src/components/InnerAccordion/InnerAccordion.module.scss
+++ b/src/components/InnerAccordion/InnerAccordion.module.scss
@@ -2,7 +2,7 @@
 
 .accordion__header {
   margin: 0;
-  scroll-margin: 10rem;
+  // scroll-margin: 10rem;
   & > .trigger {
     color: $neutral-800;
     font-weight: 600;
