--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -14,6 +14,22 @@
    &.scrolled{
      top: -30px;
    }
+
+   &.shadow_right { 
+      &::after {
+      content: '';
+      position: absolute;
+      background-image: linear-gradient(to right,rgba(255,255,255,0) 85%,#ffffff 100%);
+      background-color: transparent;
+      height: 100%;
+      left: 0;
+      pointer-events: none;
+      top: 0;
+      width: 100%;
+      z-index: 1;
+    }
+  }
+ 
 }
 
 .navbar {
@@ -45,6 +61,7 @@
       gap: 0.5rem;
     }
   }
+
 
   @media (min-width: 1280px) {
     max-width: 1276px;
