Pr 107/add GitHub logo (#116)
* feat: Add github logo

* clean ups, responsive test

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -69,3 +69,16 @@
     overflow-x: hidden;
   }
 }
+
+.github_logo {
+  position: absolute;
+  right: 1rem;
+  top: 47%;
+  z-index: 10;
+  display: none;
+  width: 30px;
+
+  @media (min-width: 1380px) {
+    display: block;
+  }
+}
