--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -13,6 +13,7 @@
   transition: all 0.2s ease-in-out;
   text-align: center;
   padding: 0.5rem;
+  background-color: #FFFFFF;
 
   &__small {
     width: 7.38875rem;
