--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -8,6 +8,7 @@
   position: relative;
   cursor: pointer;
   transition: all 0.5s ease-in-out;
+  background-color: #FFFFFF;
 
   &:hover {
     box-shadow: 0 0 15px -5px rgba(0,0,0,0.3);
