--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,3 +1,5 @@
+@import './colors';
+
 .container {
   max-width: 1276px;
   margin: 2rem auto 20rem;
@@ -12,4 +14,8 @@
     @media (min-width: 1024px) {
       justify-content: start;
     }
-}
+
+    & > span {
+      position: relative;
+    }
+  }
