--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import './typography';
+@import './colors';
 
 html,
 body {
@@ -23,4 +24,18 @@ a {
 
 svg {
   fill: currentColor;
+}
+
+.react-tooltip-lite {
+  background-color: $brand-600;
+  color: #fff;
+  border-radius: 0.5rem;
+  font-size: 0.75rem;
+  opacity: 0.8;
+  font-weight: 500;
+}
+
+.react-tooltip-lite-arrow {
+  border-color: $brand-600;
+  opacity: 0.8;
 }
