--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,7 +12,9 @@ body {
     scroll-behavior: smooth;
     scroll-padding-top: 6rem;
 }
-
+body {
+  background-color: $brand-50;
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -24,4 +26,19 @@ a {
 
 svg {
   fill: currentColor;
+}
+
+.react-tooltip-lite {
+  background-color: $brand-600;
+  color: #fff;
+  border-radius: 0.5rem;
+  font-size: 0.75rem;
+  opacity: 0.8;
+  font-weight: 500;
+  padding: 0.75rem;
+}
+
+.react-tooltip-lite-arrow {
+  border-color: $brand-600;
+  opacity: 0.8;
 }
