Add Tooltip for link with description In progress (#121)
* In progress

* feat: Tool tips completed

* feat: Tool tips completed

* --legacy-peer-deps issue

* clean ups

* fix: return navbar as a prop, unable to re-produce the error

* Fix: changed pblugin to feat criteria

* fix: removed forcedirection, reverted to prev plugin

* Fix: Opacity removed

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -28,6 +28,18 @@ svg {
   fill: currentColor;
 }
 
+.react-tooltip-lite {
+  background-color: $brand-600;
+  color: #fff;
+  border-radius: 0.5rem;
+  font-size: 0.75rem;
+  font-weight: 500;
+  padding: 0.75rem;
+}
+
+.react-tooltip-lite-arrow {
+  border-color: $brand-600;
+}
 .introjs-prevbutton {
   display: none!important;
 }
