Preview PR bug: page scrolls bit by bit on key press

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,5 @@
 $neutral-100: #F9FAFB;
+$neutral-600: #848D9A;
 $neutral-700: #3B4554;
 $neutral-800: #212C3B;
 $neutral-900: #101B2A;
@@ -9,3 +10,5 @@ $brand-200: #D1E9FF;
 $brand-600: #1570EF;
 $brand-800: #1849A9;
 $brand-900: #194185;
+
+$divider: #E5E5E5;
