--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -9,6 +9,7 @@
    transition:top 0.5s ease 0s;
    top: 0;
    z-index: 9999;
+   padding-bottom: 0.5rem;
 
    
    &.scrolled{
@@ -74,7 +75,7 @@
 .github_logo {
   position: absolute;
   right: 1rem;
-  top: 47%;
+  top: 27%;
   z-index: 10;
   display: none;
   width: 30px;
