--- a/src/components/Search/SearchItem/SearchItem.module.scss
+++ b/src/components/Search/SearchItem/SearchItem.module.scss
@@ -15,7 +15,7 @@
   border: 1px solid transparent;
 
 
-  &:hover{
+  &:hover, &:focus{
       background-color: $brand-100;
       border-color:$brand-200;
 
