--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -49,7 +49,7 @@
     align-items: center;
     flex: 1;
 
-    h3 {
+    p {
       @extend .text__upper;
       text-transform: uppercase;
       margin-top: 0;
