--- a/src/components/InnerAccordion/InnerAccordion.module.scss
+++ b/src/components/InnerAccordion/InnerAccordion.module.scss
@@ -3,9 +3,9 @@
 .accordion__header {
   margin: 0;
   & > .trigger {
-    color: $neutral-800;
+    color: #FFF;
     font-weight: 600;
-    background-color: $brand-100;
+    background-color: $white-8;
     display: flex;
     align-items: center;
     padding: 0.75rem 1.1875rem;
@@ -17,7 +17,7 @@
     margin-bottom: 1rem;
   
     &:hover {
-      background-color: $brand-200;
+      background-color: $white-12;
     }
   
     & > .icon{
