--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -2,13 +2,13 @@
 @import "@/styles/_typography.scss";
 
 .container {
-  border: 1px solid $brand-200;
+  border: 1px solid $white-8;
   border-radius: 0.75rem;
   margin-top: 1.5625rem;
   position: relative;
   cursor: pointer;
   transition: all 0.5s ease-in-out;
-  background-color: #FFFFFF;
+  background-color: $neutral-940;
 
   &:hover {
     box-shadow: 0 0 15px -5px rgba(0,0,0,0.3);
@@ -17,7 +17,7 @@
 
 .title {
   margin: 0;
-  border-bottom: 1px solid $brand-200;
+  border-bottom: 1px solid $white-8;
   
   button {
     color: $brand-900;
@@ -37,7 +37,7 @@
 
     &.active {
       color: #FFF;
-      background-color: $brand-600;
+      background-color: $white-12;
 
       svg {
         color: #FFF;
@@ -46,7 +46,7 @@
 
     svg {
       font-size: 1.5rem;
-      color: $brand-800;
+      color: #FFF;
       transform: rotate(0deg);
       transition: all 0.2s ease-in-out;
     }
