--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -20,7 +20,7 @@
   border-bottom: 1px solid $white-8;
   
   button {
-    color: $brand-900;
+    color: #FFF;
     font-size: 1.125rem;
     font-weight: 600;
     letter-spacing: 0.5px;
