--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -53,7 +53,7 @@
       @extend .text__upper;
       text-transform: uppercase;
       margin-top: 0;
-      color: #FFF; 
+      color: $neutral-600; 
     }
 
     ul {
