--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,8 +1,9 @@
 @import "@/styles/_typography.scss";
+@import "@/styles/colors.scss";
 
 .container {
-   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
-   background-color: #FFFFFF;
+   background: $neutral-950;
+   backdrop-filter: blur(32px);
    width: 100%;
    height: 100%;
    position: sticky;
@@ -37,7 +38,6 @@
   display: flex;
   padding: 1rem;
   gap: 1.5rem;
-  background-color: #FFFFFF;
   position: relative;
   width: 100%;
   overflow-x: auto;
@@ -53,6 +53,7 @@
       @extend .text__upper;
       text-transform: uppercase;
       margin-top: 0;
+      color: $neutral-600; 
     }
 
     ul {
