--- a/src/components/InnerAccordion/InnerAccordion.module.scss
+++ b/src/components/InnerAccordion/InnerAccordion.module.scss
@@ -5,7 +5,7 @@
   & > .trigger {
     color: #FFF;
     font-weight: 600;
-    background-color: $white-8;
+    background-color: $opacity-08;
     display: flex;
     align-items: center;
     padding: 0.75rem 1.1875rem;
@@ -17,7 +17,7 @@
     margin-bottom: 1rem;
   
     &:hover {
-      background-color: $white-12;
+      background-color: $opacity-12;
     }
   
     & > .icon{
