--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -19,7 +19,7 @@
   height: 56px;
   background: $neutral-950;
   backdrop-filter: blur(32px);
-  border: 1px solid $white-8;
+  border: 1px solid $opacity-08;
  
   border-radius: 0.5rem;
   padding-inline: 1rem 3rem;
@@ -41,7 +41,7 @@
       letter-spacing: -0.01em;
 
     &::placeholder {
-      color: $neutral-600;
+      color: $neutral-500;
     }
 
   }
@@ -49,7 +49,7 @@
  
 
   & > .search_icon, & > .close {
-    color: $neutral-600;
+    color: $neutral-500;
     position: absolute;
     right: 1.21875rem;
     top: 30%;
