--- a/src/components/NavItem/NavItem.module.scss
+++ b/src/components/NavItem/NavItem.module.scss
@@ -40,7 +40,7 @@
   }
 
   &.selected {
-    color: #FFFFFF;
+    color: $white;
     background-color: $brand-600;
     border: 1px solid $brand-600;
   }
