--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,8 +2,8 @@
 
 .container {
   max-width: 1276px;
-  margin: 2rem auto;
-  padding-inline: 1rem;
+  margin: 6.8125rem auto 0;
+  padding-inline: 1.5rem;
   color: $opacity-12;
 }
 
@@ -15,8 +15,9 @@
 .banner {
   width: 100%;
   max-width: 22.8125rem;
-  border: 1px solid $opacity-40B;
+  margin-bottom: 2rem;
 }
+
 .contents {
   flex: 1;
   border: 1px solid $brown-800;
