--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -26,7 +26,7 @@ $neutral-950: rgba(15, 20, 26, 0.6);
 $brand-50: #FAFCFF;
 $brand-100: #F0F6FF;
 $brand-200: #D1E9FF;
-$brand-500: #2E90FA;
+$brand-500: #2e90fa;
 $brand-600: #1570EF;
 $brand-620: #437BCA;
 $brand-650: #1053C6;
