--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -31,7 +31,7 @@ svg {
 
 .react-tooltip-lite {
   background-color: $brand-600;
-  color: #fff;
+  color: $white;
   border-radius: 0.5rem;
   font-size: 0.75rem;
   font-weight: 500;
