--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/colors';
 
 .container {
-  color: #FFF;
+  color: $white;
   font-weight: 600;
   display: flex;
   flex-direction: column;
