--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,9 +2,9 @@
 
 .container {
   max-width: 1276px;
-  margin: 2rem auto;
-  padding-inline: 1rem;
-  color: $white-12;
+  margin: 6.8125rem auto 0;
+  padding-inline: 1.5rem;
+  color: $opacity-12;
 }
 
 .wrapper {
@@ -15,9 +15,9 @@
 .banner {
   width: 100%;
   max-width: 22.8125rem;
-  border: 1px solid $brand-400-light;
-  padding: 2rem;
+  margin-bottom: 2rem;
 }
+
 .contents {
   flex: 1;
   border: 1px solid $brown-800;
