--- a/src/components/WelcomeSection/WelcomeSection.module.scss
+++ b/src/components/WelcomeSection/WelcomeSection.module.scss
@@ -75,14 +75,8 @@
   width: 100%;
   max-width: 816px;
   min-width: 300px;
-  height: 340px;
+  min-height: 340px;
   padding: 1rem;
-  overflow-y: auto;
-  scrollbar-width: none;
-
-  &::-webkit-scrollbar { 
-    display: none;
-  }
 
   @media (min-width: 1280px) {
     padding: 3rem;
