--- a/src/components/WelcomeSection/WelcomeSection.module.scss
+++ b/src/components/WelcomeSection/WelcomeSection.module.scss
@@ -73,10 +73,13 @@
   border: 1px solid $opacity-12;
   backdrop-filter: blur(40px);
   width: 100%;
-  max-width: 816px;
   min-width: 300px;
   min-height: 340px;
-  padding: 1rem;
+  padding: 1.5rem;
+
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1.5rem;
 
   @media (min-width: 1280px) {
     padding: 3rem;
@@ -90,24 +93,5 @@
     background: rgba(204, 154, 25, 0.06);
   }
   
-  .counter {
-    @extend .text__short--sm;
-    background: $opacity-08;
-    border-radius: 0.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.125rem 0.5rem;
-  }
-  
-  @media (min-width: 1280px) {
-    padding-inline: 3rem;
-  }
   border-radius: 0 0.75rem 0.75rem;
-}
-
-@media (min-width: 1280px) {
-  .container {
-    padding-inline: 3rem;
-  }
 }
