--- a/src/components/WelcomeSectionCard/WelcomeSectionCard.module.scss
+++ b/src/components/WelcomeSectionCard/WelcomeSectionCard.module.scss
@@ -10,10 +10,14 @@
   margin-bottom: 1rem;
 }
 
-.info {
+.overlay, .link, .info, .count {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+}
+
+.info {
+  justify-content: space-between;
   color: $white;
   @extend .text__short--sm;
 
@@ -30,9 +34,6 @@
   .count {
     background: $opacity-08;
     border-radius: 0.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 0.125rem 0.5rem;
     transform: translateY(-0.2rem);
 } 
@@ -41,6 +42,7 @@
 
 
 .card {
+  position: relative;
   width: 100%;
   height: 224px;
   overflow-y: auto;
@@ -52,4 +54,37 @@
     display: none;
   }
   border-radius: 0.75rem;
+
+  
+  .overlay {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: $opacity-08;
+    border: 1px solid $white;
+    backdrop-filter: blur(4px);
+
+    & > .link {
+      background: $white;
+      width: 3rem;
+      height: 3rem;
+      border-radius: 50%;
+
+      svg {
+        color: $brand-600;
+      }
+    }
+
+    border-radius: 0.75rem;
+    transition: all 0.2s ease-in-out;
+}
+
+  &:hover {
+    .overlay {
+      opacity: 1;
+    }
+  }
 }
