--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -9,6 +9,8 @@ $opacity-12: rgba(255, 255, 255, 0.12);
 $opacity-40B: rgba(90, 169, 242, 0.4);
 $opacity-40BG: rgba(33, 44, 59, 0.4);
 
+$overlay-08 : rgba(25, 29, 32, 0.8);
+
 
 $neutral-100: #F9FAFB;
 $neutral-200: #e7eaee;
